# ParityPartyFS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  requirements.txt
exec/: CMakeLists.txt  main.cpp
fuse_benchmark/: runner.py
fuse_exec/: mkfs_main.cpp  (+3 more)
lib/: CMakeLists.txt
lib/bitmap/: CMakeLists.txt
lib/bitmap/include/bitmap/: bitmap.hpp
lib/bitmap/include/ppfs/bitmap/: bitmap.hpp
lib/bitmap/src/: bitmap.cpp
lib/block_manager/: CMakeLists.txt
lib/block_manager/include/block_manager/: block_manager.hpp  iblock_manager.hpp
lib/block_manager/include/ppfs/block_manager/: block_manager.hpp  iblock_manager.hpp
lib/block_manager/src/: block_manager.cpp
lib/blockdevice/: CMakeLists.txt
lib/blockdevice/include/blockdevice/: bit_helpers.hpp  crc_block_device.hpp  ecc_type.hpp  hamming_block_device.hpp  iblock_device.hpp  parity_block_device.hpp  raw_block_device.hpp  rs_block_device.hpp
lib/blockdevice/include/ppfs/blockdevice/: crc_block_device.hpp  hamming_block_device.hpp  iblock_device.hpp  parity_block_device.hpp  raw_block_device.hpp  rs_block_device.hpp
lib/blockdevice/src/: crc_block_device.cpp  crc_polynomial.cpp  hamming_block_device.cpp  parity_block_device.cpp  raw_block_device.cpp  rs_block_device.cpp
lib/common/: CMakeLists.txt
lib/common/include/common/: bit_helpers.hpp  buffer.hpp  math_helpers.hpp  ppfs_mutex.hpp  static_vector.hpp  types.hpp
lib/common/include/ppfs/common/: bit_helpers.hpp  ppfs_mutex.hpp  static_vector.hpp
lib/data_collection/: CMakeLists.txt
lib/data_collection/include/data_collection/: data_colection.hpp
lib/data_collection/include/ppfs/data_collection/: data_colection.hpp
lib/data_collection/src/: data_collection.cpp
lib/directory_manager/: CMakeLists.txt
lib/directory_manager/include/directory_manager/: directory.hpp  directory_manager.hpp  idirectory_manager.hpp
lib/directory_manager/include/ppfs/directory_manager/: directory.hpp  directory_manager.hpp  idirectory_manager.hpp
lib/directory_manager/src/: directory_manager.cpp
lib/disk/: CMakeLists.txt
lib/disk/include/disk/: file_disk.hpp  heap_disk.hpp  idisk.hpp  stack_disk.hpp
lib/disk/include/ppfs/disk/: file_disk.hpp  idisk.hpp  stack_disk.hpp
lib/disk/src/: file_disk.cpp  heap_disk.cpp  stack_disk.cpp
lib/ecc_helpers/: CMakeLists.txt
lib/ecc_helpers/include/ecc_helpers/: crc_polynomial.hpp  gf256.h  gf256.hpp  gf256_utils.h  gf256_utils.hpp  polynomial_gf256.h  polynomial_gf256.hpp
lib/ecc_helpers/include/ppfs/ecc_helpers/: crc_polynomial.hpp  gf256.hpp  polynomial_gf256.hpp
lib/ecc_helpers/src/: crc_polynomial.cpp  gf256.cpp  gf256_utils.cpp  polynomial_gf256.cpp
lib/file_io/: CMakeLists.txt
lib/file_io/include/file_io/: file_io.hpp
lib/file_io/include/ppfs/file_io/: file_io.hpp
lib/file_io/src/: file_io.cpp
lib/file_reader/include/file_reader/: file_reader.hpp
lib/filesystem/: CMakeLists.txt
lib/filesystem/include/filesystem/: fs_config.hpp  fs_config_helpers.hpp  fs_mock.hpp  ifilesystem.hpp  ifilesystem_low_level.hpp  mutex_wrapper.hpp  open_files_table.hpp  ppfs.hpp  ppfs_linux.hpp  ppfs_low_level.hpp  types.hpp
lib/filesystem/include/ppfs/filesystem/: fs_config_helpers.hpp  ifilesystem.hpp  ifilesystem_low_level.hpp  mutex_wrapper.hpp  open_files_table.hpp  ppfs.hpp  ppfs_low_level.hpp  types.hpp
lib/filesystem/src/: fs_config_helpers.cpp  fs_mock.cpp  ppfs.cpp  ppfs_linux.cpp  ppfs_low_level.cpp
lib/fusepp/: CMakeLists.txt
lib/fusepp/include/fusepp/: Fuse-impl.hpp  Fuse.hpp
lib/fusepp/src/: Fuse.cpp
lib/inode_manager/: CMakeLists.txt
lib/inode_manager/include/inode_manager/: iinode_manager.hpp  inode.hpp  inode_manager.hpp
lib/inode_manager/include/ppfs/inode_manager/: iinode_manager.hpp  inode.hpp  inode_manager.hpp
lib/inode_manager/src/: inode_manager.cpp
lib/low_level_fuse/: CMakeLists.txt
lib/low_level_fuse/example/: CMakeLists.txt  README.md  main.cpp
lib/low_level_fuse/include/low_level_fuse/: fuse_ppfs.hpp  fuse_wrapper.h  fuse_wrapper.hpp
lib/low_level_fuse/include/ppfs/low_level_fuse/: fuse_ppfs.hpp
lib/low_level_fuse/src/: fuse_ppfs.cpp  fuse_wrapper.cpp
lib/ppfs/: CMakeLists.txt
lib/ppfs/include/ppfs/: data_structures.hpp  layout.hpp  ppfs.hpp  types.hpp
lib/ppfs/src/: data_structures.cpp  ppfs.cpp
lib/ppfs_fat/: CMakeLists.txt
lib/ppfs_fat/include/ppfs_fat/: data_structures.hpp  ppfs.hpp  types.hpp
lib/ppfs_fat/src/: data_structures.cpp  ppfs.cpp
lib/super_block_manager/: CMakeLists.txt
lib/super_block_manager/include/ppfs/super_block_manager/: isuper_block_manager.hpp  super_block.hpp  super_block_manager.hpp
lib/super_block_manager/include/super_block_manager/: isuper_block_manager.hpp  super_block.hpp  super_block_manager.hpp
lib/super_block_manager/src/: super_block_manager.cpp
performance_tests/: CMakeLists.txt  bench_blockdevice.cpp
tests/: CMakeLists.txt
unit_tests/: CMakeLists.txt  test_bitmap.cpp  test_bits.cpp  test_block_manager.cpp  test_crc_block_device.cpp  test_directory_manager.cpp  test_file_disk.cpp  test_file_io.cpp  test_fs_config_helpers.cpp  test_hamming_block_device.cpp  test_helpers.cpp  test_inode_manager.cpp  test_parity_block_device.cpp  test_ppfs.cpp  test_ppfs_data_structures.cpp  test_ppfs_fat.cpp  test_ppfs_low_level.cpp  test_ppfs_parametrized_crc.cpp  test_ppfs_parametrized_ecc.cpp  test_ppfs_parametrized_format.cpp  test_ppfs_parametrized_hamming.cpp  test_ppfs_parametrized_helpers.hpp  test_ppfs_parametrized_init.cpp  test_ppfs_parametrized_io.cpp  test_ppfs_parametrized_multi.cpp  test_ppfs_parametrized_none.cpp  test_ppfs_parametrized_reed_solomon.cpp  test_rs_block_device.cpp  test_stack_disk.cpp  test_super_block_manager.cpp
usage_simulator/simulation/: CMakeLists.txt  simulation_config.txt
usage_simulator/simulation/include/simulation/: bit_flipper.hpp  irradiated_disk.hpp  mock_user.hpp  model_flipper.hpp  simulation_config.hpp
usage_simulator/simulation/src/: bit_flipper.cpp  irradiated_disk.cpp  mock_user.cpp  model_flipper.cpp  simulation_config.cpp
(+11 files in other folders)
